--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -17,14 +17,14 @@
         <Button
             android:id="@+id/history_button"
             style="@style/Smoldr.LaunchButton"
-            android:text="This shows the history" />
+            android:text="History" />
 
-        <ListView
+        <ExpandableListViewListView
             android:id="@+id/history_list"
             android:layout_width="wrap_content"
-            android:layout_height="fill_parent">
+            android:layout_height="fill_parent" />
 
-        </ListView>
+
     </LinearLayout>
 
 
