--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -9,13 +9,16 @@
         android:id="@+id/expandedListItem"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="10dp"
         android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
-        android:paddingStart="?android:attr/expandableListPreferredChildPaddingLeft"
-        android:paddingTop="10dp" />
+        android:paddingStart="?android:attr/expandableListPreferredChildPaddingLeft" />
 
     <TextView
-        android:id="@+id/childItem"
+        android:id="@+id/firstItem"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/secondItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </LinearLayout>
