--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -27,6 +27,13 @@
             android:layout_marginBottom="48dp"
             android:text="Login with Google" />
 
+        <TextView
+            android:id="@+id/text_install"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:text="@string/install" />
+
 
     </LinearLayout>
 
