--- a/app/src/main/res/layout/fragment_install.xml
+++ b/app/src/main/res/layout/fragment_install.xml
@@ -1,8 +1,30 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.v4.nate.smokedetect.InstallFragment">
 
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="false"
+        android:orientation="vertical"
+        android:paddingLeft="34dp"
+        android:paddingRight="34dp"
+        android:paddingTop="56dp">
+
+        <TextView
+            android:id="@+id/directions"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="
+    1. Plug the detector into the wall.
+    2. Do some other stuff.
+    3. Here is a pic telling you what you should do"
+
+            />
+
+    </LinearLayout>
+
+
+</RelativeLayout>
