--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -31,8 +31,9 @@
             android:id="@+id/text_install"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:text="@string/install" />
+            android:layout_marginBottom="14dp"
+            android:text="@string/install"
+            android:textAlignment="center" />
 
 
     </LinearLayout>
