--- a/app/src/main/res/layout/fragment_landing.xml
+++ b/app/src/main/res/layout/fragment_landing.xml
@@ -1,8 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.v4.nate.smokedetect.LandingFragment">
 
-</android.support.constraint.ConstraintLayout>
+    <ImageButton
+        android:id="@+id/landingButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:adjustViewBounds="true"
+        android:maxHeight="280dp"
+        android:maxWidth="280dp"
+        android:padding="3dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/orange_flame" />
+
+    <TextView
+        android:id="@+id/detectorStatus"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        android:text="" />
+</RelativeLayout>
