--- a/app/src/main/res/layout/fragment_landing.xml
+++ b/app/src/main/res/layout/fragment_landing.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingLeft="34dp"
+    android:paddingRight="34dp"
     tools:context="com.v4.nate.smokedetect.LandingFragment">
 
     <ImageButton
@@ -24,4 +26,10 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:text="" />
+
+    <Button
+        android:id="@+id/hush_button"
+        style="@style/Smoldr.LaunchButton"
+        android:layout_centerInParent="true"
+        android:text="Hush Alarm" />
 </RelativeLayout>
